--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Relation.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Relation.razor
@@ -1,7 +1,6 @@
 ﻿@inherits MasaCompontentBase
-@page "/relation"
 
-<SheetDialog @bind-Value="Value" Title="@T("Relation public config")" Icon="mdi-circle" IconColor="success">
+<SheetDialog Value="Value" ValueChanged="SheetDialogValueChanged" Title="@T("Relation public config")" Icon="mdi-circle" IconColor="success">
     <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
         <div>
             <div class="text-h6 d-flex align-center">
@@ -22,6 +21,7 @@
             <p class="neutral--text mt-12" style="font-size:14px; font-weight:700;">选择公共配置对象</p>
             <MSelect Value="_selectPublicConfigObjectId"
                      ValueChanged="SelectConfigObjectValueChanged"
+                     Style="width: 50%;"
                      TValue="int"
                      TItemValue="int"
                      TItem="ConfigObjectDto"
@@ -51,10 +51,10 @@
                             }
                             else
                             {
-                                <MIcon Style="width: 5%" Color="#7681AB">mdi-unlink-variant</MIcon>
+                                <MIcon Style="width: 5%" Color="#7681AB">mdi-link-variant-off</MIcon>
                             }
                             <div style="width: 47.5%">@item.Key</div>
-                            <MTextField style="width: 47.5%" Dense HideDetails="true" Outlined TValue="string" Value="item.Value" ValueChanged="value=>PropertyValueChanged(value,item)" Label="Value"></MTextField>
+                            <MTextField style="width: 47.5%" Dense HideDetails="true" Outlined TValue="string" Value="item.Value" ValueChanged="value=>PropertyValueChanged(value,item)"></MTextField>
                         </MRow>
                     }
                 </div>
@@ -63,13 +63,15 @@
             {
                 if (_isRelation)
                 {
-                    <MIcon Color="#7681AB">mdi-link-variant</MIcon>
+                    <MIcon Size="18" Color="#7681AB">mdi-link-variant</MIcon>
+                    <span style="color: #7681AB; font-size: 14px;">已关联</span>
                 }
                 else
                 {
-                    <MIcon Color="#7681AB">mdi-unlink-variant</MIcon>
+                    <MIcon Size="18" Color="#7681AB">mdi-link-variant-off</MIcon>
+                    <span style="color: #7681AB; font-size: 14px;">已覆盖</span>
                 }
-                <MTextarea Dense Outlined Value="@_selectConfigObject.Content" ValueChanged="value=>ContentValueChanged(value,_selectConfigObject)"></MTextarea>
+                <MTextarea Class="mt-3" Dense Outlined Value="@_selectConfigObject.Content" ValueChanged="value=>ContentValueChanged(value,_selectConfigObject)"></MTextarea>
             }
         </div>
         <div class="d-flex justify-end align-end" style="width:100%; height:100%;">
