--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/Editor.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/Editor.razor
@@ -10,7 +10,7 @@
                     </div>
                 }
             </div>
-            <textarea style="outline:none;resize:none;width:100%;" autofocus
+            <textarea style="outline:none; resize:none; width:100%; height: 310px;" autofocus
                       disabled="@Disabled"
                       @oninput="OnInput" @ref="Ref" value="@Value" @onchange="HandleOnChange">
             </textarea>
