--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -1167,6 +1167,15 @@ input::-webkit-input-placeholder {
     height: 100% !important;
 }
 
-.m-expansion-panel-header:before{
-    content:none !important;
+.m-expansion-panel-header:before {
+    content: none !important;
+}
+
+/*timeline*/
+.m-timeline-item__divider {
+    min-width: 40px !important;
+}
+
+.m-timeline-item {
+    margin-right: 56px !important;
 }
