--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -12,3 +12,4 @@
 @using Masa.Dcc.Web.Admin.Rcl.Components
 @using Masa.BuildingBlocks.BasicAbility.Pm.Model
 @using Masa.Stack.Components
+@using Masa.Dcc.Web.Admin.Rcl.Pages.Modal;
