--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -2,11 +2,11 @@
 @inherits MasaCompontentBase;
 
 <div class="d-flex">
-    <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="height: calc(100vh - 180px);">
-        <div style="min-width:300px; padding:16px 24px; display:flex; flex-direction:column; align-items:center; overflow: auto; height: calc(100vh - 218px);">
-            <div style="width:100%;" class="text-body2">
+    <MNavigationDrawer Right Permanent Class="rounded-4 py-6" Width="300" Style="height: calc(100vh - 180px);">
+        <div style="min-width:300px; padding:0 24px; display:flex; flex-direction:column; align-items:center; overflow: auto;">
+            <div style="width:100%; overflow-x: hidden;" class="text-body2">
                 <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
-                    <div class="text-h6">@_projectDetail.Name</div>
+                    <div class="text-h6" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@_projectDetail.Name</div>
                 </MRow>
                 <MRow NoGutters Class="mt-6">
                     @T("AppCount")：@AppCount
@@ -32,8 +32,6 @@
                     }
                 </div>
             </div>
-            <MSpacer></MSpacer>
-            <div style="width:100%" class="text-caption d-flex justify-end mt-6">@_projectDetail.CreationTime.ToString(T("$DateTimeFormat"))</div>
         </div>
     </MNavigationDrawer>
     <div class="pl-6" style="width: calc(100% - 300px);">
@@ -112,7 +110,7 @@
                         foreach (var app in _apps)
                         {
                             <MCol Lg="4" Md="6" Sm="12">
-                                <AppCard OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" ShowEditInfo EditInfo="@app.CreationTime.ToString(T("$DateTimeFormat"))" App="app" EnvironmentClusters="app.EnvironmentClusters">
+                                <AppCard OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
                                     <MMenu Transition="slide-y-transition" Bottom>
                                         <ActivatorContent>
                                             <MButton @attributes="@context.Attrs" Style="border: 1px solid #E2E7F4" Icon Width="24" Height="24">
